apps/evoapi/server/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: evoapi
  namespace: fluia

spec:
  selector:
    app: evoapi
  ports:
    - name: http
      port: 80
      targetPort: 8080
