apps/evoapi/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: evoapi
  namespace: fluia
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - evoapi-fluia.ynoacamino.me
      secretName: evoapi-tls
  rules:
    - host: evoapi-fluia.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evoapi
                port:
                  number: 80
